--- a/you_meme_frontend/package.json
+++ b/you_meme_frontend/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-google-login": "^5.2.2",
+    "react-google-oauth2": "^0.1.2",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^4.0.0",
     "react-masonry-css": "^1.0.16",
@@ -45,6 +48,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.16.0",
+    "eslint-plugin-react": "^7.30.0",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
   }
